Fix LaTeX rendering - LaTeX used to render on top of the Topbar on mobile if the Settings pane wasn't shown. This commit fixes the Topbar z-index to *always* be on top of main content. - On Safari, LaTeX blocks would annoying scroll independently on the page (despite having no real overflow). This commit specifies that vertical overflow should always be hidden on LaTeX.

--- a/_sass/spec/base.scss
+++ b/_sass/spec/base.scss
@@ -69,10 +69,7 @@ $Z_INDEX_SIDEBAR: 3;
   // We don't want the Topbar to register click events. This allows clicks to
   // pass-through to underlying main-content.
   pointer-events: none;
-
-  &-settings-shown {
-    z-index: $Z_INDEX_TOPBAR;
-  }
+  z-index: $Z_INDEX_TOPBAR;
 }
 
 /**
